Modify root style

--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,13 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+#root {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 a {
   font-weight: 500;
   color: #646cff;
